2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/fms.py:
	Implement publishStream method on our application. This way we can
	check if a given stream has already been published and/or if the client
	is still alive. If the encoder died or lost the connection without
	unpublishing/disconnecting, here we can detect it and proceed with the
	disconnect/unpublish before letting another encoder to publish.

2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/fms.py:
	Do not remove subscribers. It is done already in a deeper layer.

2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/fms.py:
	Modifications to be compatible with new rtmpy

2010-11-15  Xavier Queralt  <xqueralt@flumotion.com>

	reviewed by: jribas

	* flumotion/component/producers/fms/live.py:
	Modifications to be compatible with new rtmpy

2010-09-30  Andoni Morales Alastruey  <amorales@flumotion.com>

	reviewed by: Sebastien Merle 
	* flumotion/component/producers/fms/fms.py:
	Fix re-timestamping and synchronisation.

	A trailing video buffer is sent after the reconnection with a weird
	timestamp (non-contiguous).It was causing gaps in the re-timestamping
	and introducing desyncs. This was fixed dropping buffers until we get
	a continous keyframe.

	Now that we know that this buffer is an H264 END_OF_SEQUENCE packet,
	we can set its timeamp to the last one received and start
	re-timestamping the next buffers from this resync point.
	The re-timestamping logic is more simple and robust:
	fixedTS = syncTS - syncOffset + timestamp

	Example:
	We received the last buffer with ts=10000. After the reconnection
	buffer1 has ts=100 and buffer2 has ts=140. We set syncTS=10000+x (where x
	is set to 40ms because a gap is needed from the last timestamp) and 
	syncOffset=100
	We get after fixing the timestamps:
	buffer1 -> ts=10040